--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,10 +27,8 @@ services:
     build: ./smart_warehouse
     ports:
       - "8000:8000"
-#    volumes:
-#      - ./smart_warehouse:/app
     working_dir: /app
-    command: sh -c "python manage.py migrate && daphne -b 0.0.0.0 -p 8000 smart_warehouse.asgi:application"
+    command: sh -c "python manage.py migrate && python manage_init_data.py && daphne -b 0.0.0.0 -p 8000 smart_warehouse.asgi:application"
     environment:
       DB_HOST: db
       DB_NAME: smartwarehouse
