--- a/smart_warehouse/Dockerfile
+++ b/smart_warehouse/Dockerfile
@@ -1,5 +1,21 @@
-FROM python:3.11
+FROM python:3.11-slim
+
+
 WORKDIR /app
+
+
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
+
+# Копируем все файлы проекта
 COPY . .
+
+ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1
+
+# Порт для Daphne
+EXPOSE 8000
+
+
+CMD ["daphne", "-b", "0.0.0.0", "-p", "8000", "smart_warehouse.asgi:application"]
