--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 POSTGRES_DB=smart_warehouse
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=marki51151
+POSTGRES_PASSWORD=admin
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
