--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,9 +35,9 @@ services:
     deploy:
       resources:
         limits:
-          memory: 100M
-        reservations:
           memory: 256M
+        reservations:
+          memory: 100M
 
   backend:
     build: ./smart_warehouse
@@ -99,13 +99,12 @@ services:
       - backend
     deploy:
       resources:
-        limit
+        limits:
           memory: 512M
         reservations:
           memory: 256M
 
   nginx:
-    image: nginx:alpine
     restart: unless-stopped
     build:
         context: .
