--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,7 +108,7 @@ services:
     restart: unless-stopped
     build:
         context: .
-        dockerfile: ./docker/nginx/Dockerfile
+        dockerfile: ./Dockerfile
     ports:
       - "80:80"
     depends_on:
