--- a/nginx.conf
+++ b/nginx.conf
@@ -39,11 +39,7 @@ server {
         proxy_read_timeout 86400;
     }
 
-    location /static/ {
-        proxy_pass http://backend;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
+    location /static/ { proxy_pass http://frontend; }
 
     location /media/ {
         proxy_pass http://backend;
